...
    },
    'nc0f4to4': {
      'en': 'Settings',
      'pl': 'Ustawienia',
    },
    '6roihswp': {
      'en': 'Log out',
      'pl': 'Wyloguj się',
    },
    '40zuzkeo': {
      'en': 'Profile',
      'pl': 'Profil',
    },
  },
  // Dashboard
  {
    'c03mc318': {
...
    },
    '4cl22xb7': {
      'en': 'Please choose an option from the dropdown',
      'pl': 'Proszę, wybierz opcję z listy',
    },
    'sn9k8c7p': {
      'en': 'Add',
      'pl': 'Dodaj',
    },
    '94075mlo': {
      'en': 'Home',
      'pl': 'Dom',
    },
  },
  // GuidePage
  {
    'a6e30llq': {
      'en': 'Guide',
      'pl': 'Poradnik',
    },
    'jdfjasls': {
      'en': 'Start looking for the species',
      'pl': 'Zacznij szukać roślin',
    },
    '3db37zup': {
      'en': 'Plant name',
      'pl': 'Nazwa rośliny',
    },
...
  {
    'amcoh1fd': {
      'en': 'Shopping List',
      'pl': 'Lista zakupów',
    },
    '3msc126y': {
      'en': 'Shopping list for taking good care of your plants',
      'pl': 'Lista zakupów, która pomoże Ci zadbać o rośliny',
    },
    '49frn1i3': {
      'en': 'List',
      'pl': 'Lista',
    },
  },
  // ItemList
  {
    'ttcg2qnk': {
...
      'pl': 'Dom',
    },
  },
  // Calendar
  {
    '85lr7nct': {
      'en': 'Calendar',
      'pl': 'Kalendarz',
    },
    'o3myty9g': {
      'en': 'Manage the care time of your plants',
      'pl': 'Zarządzaj czasem opieki nad swoimi roślinami',
    },
    'vlpgg1qs': {
      'en': 'Calendar',
      'pl': 'Kalendarz',
    },
...
  {
    'dd2fx18v': {
      'en': 'Specific list',
      'pl': 'Lista dla kwiatka',
    },
    'neh75pta': {
      'en': 'General list',
      'pl': 'Lista ogólna',
    },
    'hlel0u2j': {
      'en': 'Shopping list name',
      'pl': 'Nazwa listy zakupów',
    },
...
