...
                safeSetState(() => _model.requestCompleter = null);
                await _model.waitForRequestCompleted();
              },
              backgroundColor: FlutterFlowTheme.of(context).primary,
              elevation: 8.0,
              child: Icon(
			  			  key: ValueKey('test'),

                Icons.add_rounded,
                color: FlutterFlowTheme.of(context).primaryText,
                size: 36.0,
              ),
            ),
...
