...
                                              }
                                              List<PlantCategoriesRow>
                                                  dropDownPlantCategoriesRowList =
                                                  snapshot.data!;

                                              return FlutterFlowDropDown<int>(
                                                key: const ValueKey('category_select_field'),
                                                controller: _model
                                                        .dropDownValueController ??=
                                                    FormFieldController<int>(
                                                        null),
                                                options: List<int>.from(
                                                    dropDownPlantCategoriesRowList
...
                                          ),
                                          Form(
                                            key: _model.formKey2,
                                            autovalidateMode:
                                                AutovalidateMode.disabled,
                                            child: TextFormField(
                                              key: ValueKey('name_text_field'),
                                              controller:
                                                  _model.nameTextController,
                                              focusNode: _model.nameFocusNode,
                                              onChanged: (_) =>
                                                  EasyDebounce.debounce(
                                                '_model.nameTextController',
...
                                                    );
                                                  }),
                                              ],
                                            ),
                                          ),
                                          TextFormField(
                                            key: ValueKey('description_text_field'),
                                            controller: _model
                                                .descriptionTextController,
                                            focusNode:
                                                _model.descriptionFocusNode,
                                            autofocus: true,
                                            textCapitalization:
...
                                                                .sentences),
                                                  );
                                                }),
                                            ],
                                          ),
                                          TextFormField(
                                            key: ValueKey('location_text_field'),
                                            controller:
                                                _model.locationTextController,
                                            focusNode: _model.locationFocusNode,
                                            autofocus: true,
                                            textCapitalization:
                                                TextCapitalization.sentences,
...
                                          ),
                                          Form(
                                            key: _model.formKey1,
                                            autovalidateMode:
                                                AutovalidateMode.disabled,
                                            child: TextFormField(
                                              key: ValueKey('species_text_field'),
                                              controller:
                                                  _model.speciesTextController,
                                              focusNode:
                                                  _model.speciesFocusNode,
                                              onChanged: (_) =>
                                                  EasyDebounce.debounce(
...
